--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
 
         <p>Início dos estudos de Ciência da Computação na Universidade do Estado de Santa Catarina.</p>
         <h2>Projetos</h2>
-        
+
         <p>Em manutenção.</p>
+        <h2>Clientes</h2>
+        <div class="cliente" id="valora">
+
+        </div>
+        
+ 
 
         <h2>Contato</h2>
         <ul>
